# Recorder

./: .gitignore  CMakeLists.txt  README.md
include/: recorder.h
lib/: CMakeLists.txt  recorder-posix.c
tools/: CMakeLists.txt  reader.c  reader.h  recorder2parquet.cpp  recorder2parquetworkflow.cpp  recorder2parquetworkflow_vani.cpp  recorder2timeline.cpp
